@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.lcvk</groupId>
-    <artifactId>lunar_core</artifactId>
+    <groupId>org.pithos</groupId>
+    <artifactId>pithos_core</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Lunar Custom Vector Kernel</name>
+    <name>Pithos Vector Search Engine</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -73,7 +73,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
-                    <argLine>--add-modules jdk.incubator.vector</argLine>
+                    <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
                 </configuration>
             </plugin>
 
@@ -94,7 +94,7 @@
                 </executions>
                 <configuration>
                     <sharedLibrary>true</sharedLibrary>
-                    <imageName>lunar_core</imageName>
+                    <imageName>pithos</imageName>
                     <buildArgs>
                         <buildArg>--no-fallback</buildArg>
                         <buildArg>--add-modules=jdk.incubator.vector</buildArg>
